# rust

./: Cargo.toml  budget.csv  notes.md  report.txt  work_log.csv
src/: 01_preparation.rs  02_basics.rs  03_guess_game.rs  04_fibonacci.rs  05_ownership.rs  07_enums.rs  08_collections.rs  09_traits_and_generics.rs  10_lifetime.rs  10_lifetimes.rs  11_modules.rs  12_basic-io.rs  13_threads.rs  collections_generics_traits.rs  lib.rs  main.rs  memory_management.rs  threads.rs
src/app/: utils.rs
src/exercises/: budget.rs  cat.rs  echo.rs  employees.rs  find.rs  grep.rs  grep_classic.rs  iterators.rs  mod.rs  money.rs  money_with_enums.rs  tic_tac_toe.rs  utils.rs  wc.rs
todo-actix/: client.http
todo-rocket/: client.http
todos-actix/: Cargo.toml  client.http
todos-actix/src/: data.rs  handler.rs  main.rs
todos-rocket/: Cargo.toml
todos-rocket/src/: main.rs
