[package]
name = "rust_training"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
